Implemented batch processing

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                     <div class="progress-fill" id="progressFill"></div>
                 </div>
                 <div id="progressText" class="loading-text" style="display: none;">Processing...</div>
+                <div id="batchControls" style="display: none; text-align:center; margin: 10px 0;">
+                    <button id="cancelBtn" class="btn btn-cancel" style="display:none;">Cancel</button>
+                    <button id="nextBatchBtn" class="btn btn-secondary" style="display:none;">Process Next Batch</button>
+                </div>
 
                 <!-- Results Summary -->
                 <div id="searchSummary" class="search-summary" style="display: none;">
