--- a/index.html
+++ b/index.html
@@ -122,6 +122,22 @@
                     </div>
                     
                     <div class="form-group">
+                        <label>Matching Logic (for multiple search columns):</label>
+                        <div class="radio-group">
+                            <input type="radio" id="allMustMatch" name="matchingLogic" value="all" checked>
+                            <label for="allMustMatch">All Must Match</label>
+                        </div>
+                        <div class="radio-group">
+                            <input type="radio" id="atLeastOneMatch" name="matchingLogic" value="any">
+                            <label for="atLeastOneMatch">At Least One Must Match</label>
+                        </div>
+                        <div class="radio-group">
+                            <input type="radio" id="customMatch" name="matchingLogic" value="custom">
+                            <label for="customMatch">Custom (at least <input type="number" id="customMatchCount" min="1" max="10" value="2" style="width: 50px; margin: 0 5px;"> out of <span id="totalSearchColumns">1</span>)</label>
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
                         <label for="similarityThreshold">Similarity Threshold (for fuzzy matching):</label>
                         <div class="slider-container">
                             <input type="range" id="similarityThreshold" min="0.1" max="1.0" step="0.02" value="0.8">
